syntax = "proto3";

package kobun4.bank.names.v1;

option go_package = "v1";

message Info {
    string type = 1;
    string name = 2;
    bytes owner_account_handle = 3;
    int64 expiry_time_unix = 4;
}

message BuyRequest {
    bytes account_handle = 1;
    bytes account_key = 2;
    string type = 3;
    string name = 4;
    int64 periods = 5;
    bytes content = 6;
}

message BuyResponse {
}

message GetInfoRequest {
    string type = 2;
    string name = 3;
}

message GetInfoResponse {
    Info info = 1;
}

message GetContentRequest {
    string type = 2;
    string name = 3;
}

message GetContentResponse {
    bytes content = 1;
}

message DeleteRequest {
    bytes account_handle = 1;
    bytes account_key = 2;
    string type = 3;
    string name = 4;
}

message DeleteResponse {
}

message ListRequest {
    repeated string type = 2;
}

message ListResponse {
    repeated Info info = 1;
}

message RenewRequest {
    bytes account_handle = 1;
    bytes account_key = 2;
    string type = 3;
    string name = 4;
    int64 periods = 5;
}

message RenewResponse {
}

message TypeDefinition {
    string name = 1;
    int64 price = 2;
    int64 duration_seconds = 3;
}

message GetTypesRequest {
}

message GetTypesResponse {
    repeated TypeDefinition definition = 1;
}

message SetTypesRequest {
    repeated TypeDefinition definition = 1;
}

message SetTypesResponse {
}

service Names {
    rpc Buy(BuyRequest) returns (BuyResponse) { }
    rpc GetInfo(GetInfoRequest) returns (GetInfoResponse) { }
    rpc GetContent(GetContentRequest) returns (GetContentResponse) { }
    rpc List(ListRequest) returns (ListResponse) { }
    rpc Renew(RenewRequest) returns (RenewResponse) { }
    rpc Delete(DeleteRequest) returns (DeleteResponse) { }
    rpc GetTypes(GetTypesRequest) returns (GetTypesResponse) { }
    rpc SetTypes(SetTypesRequest) returns (SetTypesResponse) { }
}
