syntax = "proto3";

package kobun4.executor.accounts.v1;

option go_package = "v1pb";

message AuthenticateRequest {
    string username = 1;
    string password = 2;
}

message AuthenticateResponse { }

message ListRequest {
}

message ListResponse {
    repeated string name = 1;
}

service Accounts {
    rpc Authenticate(AuthenticateRequest) returns (AuthenticateResponse) { }
    rpc List(ListRequest) returns (ListResponse) { }
}
